<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meetly</string>
    <string name="team_name">team Churro</string>
    <string name="skip">skip</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_event_list">Event List</string>
    <string name="title_activity_event_viewer">Event Viewer</string>
    <string name="title_activity_event_creator">Event Creator</string>
    <string name="title">%1$d</string>
    <string name="date">%1$d</string>
    <string name="time">%1$d</string>
    <string name="duration">%1$d</string>
    <string name="title_activity_event_editor">Event Editor</string>
    <string name="hello_world">Hello world!</string>
    <string name="setName">Set Name</string>
    <string name="setDate">Set Date</string>
    <string name="currentName">Event Name</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="setEndTime">Set End Time</string>
    <string name="setStartTime">Set Start Time</string>
    <string name="eventDate">Event Date</string>
    <string name="save">Save Event</string>
    <string name="title_activity_login_screen">LoginScreen</string>

</resources>