<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:id="@android:id/list"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:paddingLeft="16dp"
			  android:paddingRight="16dp">

	<TextView
		android:id="@+id/title"
		android:text="@string/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="24sp"/>

	<TextView
		android:text="@string/date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"/>

	<TextView
		android:text="@string/time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"/>

	<TextView
		android:text="@string/duration"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="20sp"/>


        android:value="@integer/google_play_services_version" />

</LinearLayout>