<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.churro.meetly.EventCreator">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setName"
        android:id="@+id/btnName"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <!--<Button-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Event Description"-->
    <!--android:id="@+id/btnDetail"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:layout_alignParentEnd="true" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setDate"
        android:id="@+id/btnDate"
        android:layout_below="@+id/btnName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentName"
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        />

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Current Details"-->
    <!--android:id="@+id/txtDetail"-->
    <!--android:layout_marginTop="24dp"-->
    <!--android:layout_alignTop="@+id/txtName"-->
    <!--android:layout_alignParentLeft="true"-->
    <!--android:layout_alignParentStart="true"-->
    <!--/>-->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startTime"
        android:id="@+id/txtStart"
        android:layout_below="@+id/txtName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endTime"
        android:id="@+id/txtEnd"
        android:layout_below="@+id/txtStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setEndTime"
        android:id="@+id/btnEnd"
        android:layout_alignTop="@+id/btnStart"
        android:layout_alignRight="@+id/map"
        android:layout_alignEnd="@+id/map" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setStartTime"
        android:id="@+id/btnStart"
        android:layout_below="@+id/txtDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventDate"
        android:id="@+id/txtDate"
        android:layout_below="@+id/txtEnd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnCreate"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <fragment
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btnEnd"
        android:layout_above="@+id/btnCreate"
        android:id="@+id/map"
        />

</RelativeLayout>
